<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.MainActivity">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/padding_normal">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edtCurrency"
                        android:layout_width="match_parent"
                        android:layout_height="52dp"
                        android:layout_marginHorizontal="@dimen/padding_normal"
                        android:background="@drawable/bg_radius_border_non_bg"
                        android:hint="@string/searching"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:minHeight="@dimen/actionBarSize"
                        android:paddingHorizontal="@dimen/padding_normal"
                        android:paddingVertical="@dimen/padding_tiny"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:hint="Search..">

                        <requestFocus />
                    </androidx.appcompat.widget.AppCompatEditText>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvCurrency"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/padding_normal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/edtCurrency"
                        tools:itemCount="4"
                        tools:listitem="@layout/item_currency" />

                    <TextView
                        android:id="@+id/tvEmpty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/padding_normal"
                        android:gravity="center"
                        android:text="@string/empty"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                        android:visibility="invisible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/edtCurrency" />

                    <androidx.core.widget.ContentLoadingProgressBar
                        android:id="@+id/progressBar"
                        style="@style/Widget.AppCompat.ProgressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.core.widget.NestedScrollView>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/noInternetLay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/padding_normal"
                app:behavior_hideable="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvDialogTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_normal"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="2"
                    android:text="@string/title_network_dialog"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/textColor" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvDialogContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_normal"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="4"
                    android:text="@string/content_network_dialog"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    app:layout_constraintTop_toBottomOf="@id/tvDialogTitle" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivDialogImage"
                    android:layout_width="250dp"
                    android:layout_height="220dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/padding_normal"
                    app:srcCompat="@drawable/lost_connection_dra" />

                <TextView
                    android:id="@+id/btnOpenSetting"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="@dimen/padding_large"
                    android:background="@drawable/button_positive_dialog"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/button_network_dialog"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/ivDialogImage" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>